--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, Complexity</h1>
+	<p>Time complexity is a fundamental concept in computer science that measures the efficiency of an algorithm. It evaluates how the execution time of an algorithm grows as the input size increases. In other words, it quantifies the amount of time an algorithm takes to complete as a function of the input size. An algorithm is considered efficient if its time complexity remains reasonable even for larger inputs, allowing it to run quickly and effectively.</p>
+	<p><b>Space Complexity</b> is another crucial aspect of algorithm analysis. It refers to the amount of memory space an algorithm uses in relation to the input size. Space complexity can vary depending on the data structures and variables used by the algorithm. A common notation to describe space complexity is 'O(n),' where 'n' represents the input size. This notation provides an upper bound on the amount of memory the algorithm requires, ensuring that memory usage doesn't grow excessively with larger inputs.</p>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
